1.1alpha1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request #10998: Added a Database backend for OpenID
  authentication.
- Implemented feature request #10971: Added the possibility to fetch extra
  data during authentication for Database, LDAP, OpenID and TypeKey filters.
- Implemented feature request #11001: Added multiple credentials support in
  the Group filter.
- Implemented feature request #10997: Added support for OpenID check_immediate
  mode.
- Implemented feature request #11006: Added the isValid() method in the
  ezcAuthenticationSession class which can be used to avoid creating the
  authentication filters if the credentials are already stored in the session.


1.0 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Renamed ezcAuthenticationSessionFilter to ezcAuthenticationSession.
- Fixed issue #11060: TypeKey filter does not fail when using an URL which
  does not exist and does not return 404 as a public keys file.


1.0beta2 - Thursday 31 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request #10724: Added OpenID support.


1.0beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Initial release of this package.